--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
 
     <hr />
 
-    <h2>📋 배포된 환경 보기</h2>
+    <!-- <h2>📋 배포된 환경 보기</h2>
     <button onclick="loadReleases()">* 환경 목록 불러오기</button>
-    <ul id="release-list"></ul>
+    <ul id="release-list"></ul> -->
 
     <script>
       function loadReleases() {
